RESOLVED FIXED47826
Strict mode: JIT doesn't check for |this| being an immediate before dereferencing
https://bugs.webkit.org/show_bug.cgi?id=47826
Summary Strict mode: JIT doesn't check for |this| being an immediate before dereferen...
Oliver Hunt
Reported 2010-10-18 09:25:34 PDT
Strict mode: JIT doesn't check for |this| being an immediate before dereferencing
Attachments
Patch (5.34 KB, patch)
2010-10-18 09:27 PDT, Oliver Hunt
sam: review+
Oliver Hunt
Comment 1 2010-10-18 09:27:48 PDT
Oliver Hunt
Comment 2 2010-10-18 09:48:09 PDT
Note You need to log in before you can comment on or make changes to this bug.