2010-10-18  Oliver Hunt  <oliver@apple.com>

Reviewed by Sam Weinig.

        Strict mode: JIT doesn't check for |this| being an immediate before dereferencing
        https://bugs.webkit.org/show_bug.cgi?id=47826

        There's no guarantee that |this| will be a cell in a strict mode function, so
        don't claim that it is.

        * bytecode/CodeBlock.h:
        (JSC::CodeBlock::isKnownNotImmediate):
2010-10-18  Oliver Hunt  <oliver@apple.com>

        Reviewed by Sam Weinig.

        Strict mode: JIT doesn't check for |this| being an immediate before dereferencing
        https://bugs.webkit.org/show_bug.cgi?id=47826

        Add tests for accessing properties on |this| when |this| is not an object

        * fast/js/basic-strict-mode-expected.txt:
        * fast/js/script-tests/basic-strict-mode.js:
        (testThisDotAccess):
        (testThisBracketAccess):

Canonical link: https://commits.webkit.org/60531@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69965 268f45cc-cd09-0410-ab3c-d52691b4dbfc